# ok2

./: .gitignore  .gitmodules  CMakeLists.txt  compile.sh
rsrc/lua/: load.lua  missiles.lua  ships.lua  skills.lua  templates.lua
rsrc/lua/levels/: level1.lua
rsrc/lua/missiles/: blue.lua  blue1.lua  gray.lua  green.lua  pink.lua  red.lua  specialblue1.lua  yellow.lua
rsrc/lua/ships/: blue.lua  gray.lua  green.lua  pink.lua  red.lua  yellow.lua
rsrc/lua/skills/: blue.lua  blue1.lua  gray.lua  gray1.lua  green.lua  green1.lua  pink.lua  pink1.lua  red.lua  red1.lua  specialblue1.lua  specialgray1.lua  specialgreen1.lua  specialpink1.lua  (+4 more)
rsrc/shaders/: heightmap.frag  levelpass.frag  levelpass.vert  renderprogram.vert  sprite.vert  ui.frag
src/: game.cpp  game.h  gamestate.cpp  gamestate.h  globalstate.cpp  globalstate.h  main.cpp  menustate.cpp  menustate.h
src/arena/: arena.cpp  arena.h  cell.cpp  cell.h
src/entities/: entity.cpp  entity.h  entitytemplate.cpp  entitytemplate.h  laser.cpp  laser.h  lasertemplate.cpp  lasertemplate.h  missile.cpp  missile.h  missiletemplate.cpp  missiletemplate.h  playerentity.cpp  playerentity.h  playership.cpp  playership.h  ship.cpp  ship.h  shiptemplate.cpp  shiptemplate.h
src/lua/: level.cpp  level.h  lua.cpp  lua.h  pop.cpp  pop.h  templates.cpp  templates.h  time.cpp  time.h
src/skills/: skill.cpp  skill.h  skilltemplate.cpp  skilltemplate.h
src/states/: gamestate.cpp  gamestate.h  globalstate.cpp  globalstate.h  menustate.cpp  menustate.h  selectshipstate.cpp  selectshipstate.h
src/timers/: timer.cpp  timer.h
(+78 files in other folders)
